# type-stack

./: .gitignore  ChangeLog.md  LICENSE  type-stack.cabal
src/Type/: Stack.hs
