name: type-stack
version: 0.1.0.0
synopsis: Use type-level lists to manage monad transformer stacks
-- description:
homepage: https://github.com/cumber/type-stack
license: BSD3
license-file: LICENSE
author: Benjamin Mellor
maintainer: ben@smokingkangaroo.com
-- copyright:
category: Control
build-type: Simple
extra-source-files: ChangeLog.md
cabal-version: >=1.10

library
  exposed-modules: Type.Stack
  -- other-modules:
  -- other-extensions:
  build-depends: base >=4.9 && <4.10
  hs-source-dirs: src
  default-language: Haskell2010
